--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,21 +3,42 @@ name: CI
 on: push
 
 jobs:
-  code_quality:
+  build:
     runs-on: ubuntu-latest
     name: Checks with flake8, isort and run tests
-    container: python:3.9
+    services:
+      postgres:
+        image: postgres:12
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: github_actions
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
 
     steps:
+      - uses: actions/checkout@v1
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.9
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Install modules
         run: |
           pip install -r requirements.txt
           pip install flake8 isort
+          sudo apt-get install libpq-dev
       - name: Check code style
         run: |
           flake8 .
           isort --check .
+      - name: Run migrations
+        run: python manage.py migrate
       - name: Run tests
-        run: python manage.py test /tests/tests_django
+        run: python manage.py test tests/tests_django
