--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Install modules
         run: |
           pip install -r requirements.txt
-          pip install flake8 isort
+          pip install flake8 isort pytest
           sudo apt-get install libpq-dev
       - name: Check code style
         run: |
@@ -41,4 +41,4 @@ jobs:
       - name: Run migrations
         run: python manage.py migrate
       - name: Run tests
-        run: python manage.py test tests/tests_django
+        run: pytest .
