--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ pycodestyle==2.7.0
 pyflakes==2.3.1
 pyparsing==2.4.7
 pytest==6.2.5
+pytest-django==4.4.0
 pytz==2021.1
 PyYAML==5.4.1
 regex==2021.8.28
