--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,6 @@ jobs:
           flake8 .
           isort --check .
       - name: Run migrations
-        run: python manage.py migrate
+        run: export $(cat .envdev | xargs) && python3 manage.py migrate
       - name: Run tests
-        run: pytest .
+        run: export $(cat .envdev | xargs) && pytest .
