--- a/requirements.txt
+++ b/requirements.txt
@@ -2,19 +2,31 @@ asgiref==3.4.1
 attrs==21.2.0
 backports.entry-points-selectable==1.1.0
 black==21.8b0
+certifi==2021.5.30
 cfgv==3.3.1
+charset-normalizer==2.0.4
 click==8.0.1
+coreapi==2.3.3
+coreschema==0.0.4
 distlib==0.3.2
 Django==3.2.7
+django-rest-swagger==2.2.0
 djangorestframework==3.12.4
+drf-yasg==1.20.0
 filelock==3.0.12
 flake8==3.9.2
 identify==2.2.13
+idna==3.2
+inflection==0.5.1
 iniconfig==1.1.1
 isort==5.9.3
+itypes==1.2.0
+Jinja2==3.0.1
+MarkupSafe==2.0.1
 mccabe==0.6.1
 mypy-extensions==0.4.3
 nodeenv==1.6.0
+openapi-codec==1.3.2
 packaging==21.0
 pathlib==1.0.1
 pathspec==0.9.0
@@ -31,9 +43,15 @@ pytest-django==4.4.0
 pytz==2021.1
 PyYAML==5.4.1
 regex==2021.8.28
+requests==2.26.0
+ruamel.yaml==0.17.16
+ruamel.yaml.clib==0.2.6
+simplejson==3.17.5
 six==1.16.0
 sqlparse==0.4.1
 toml==0.10.2
 tomli==1.2.1
 typing-extensions==3.10.0.2
+uritemplate==3.0.1
+urllib3==1.26.6
 virtualenv==20.7.2
